plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.10'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ashirvad'
version = '0.0.1-SNAPSHOT'
description = 'Centralized AI Platform'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.json:json:20240303'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'org.postgresql:postgresql'
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3")
}

tasks.named('test') {
    useJUnitPlatform()
}
